# llm_cognitive_appraisal

./: .gitignore  DOCUMENTATION.md  README.md  STANDALONE_README.md  prompt_manager.py  pyproject.toml  requirements_standalone.txt  utils.py
LLMs/: my_gemma2.py  my_llama.py  my_mistral.py  my_olmo.py  my_olmo2.py  my_phi3.py
docs/: APPRAISAL_THEORY.md  BASELINE_PROBE_STEERING_STUDY.md  BENCHMARK_BUILD_PROCESS.md  BENCHMARK_DATASETS.md  EXPERIMENTAL_SETUP.md  GENERATION_BEHAVIOR_BENCHMARK.md  GLOSSARY.md  LOC_REFERENCE.md  MENTAL_HEALTH_STEERING_BENCHMARK.md  OUTPUTS_GUIDE.md  PIPELINE_MAP.md  PIPELINE_TLDR_RESEARCH_PARTNER.md  PROMPT_TAXONOMY.md  RESEARCH_QUESTIONS.md  RUNBOOK.md  RUNTIME_READOUT.md  START_HERE.md  kevin_pipeline.md
experiments/: __init__.py
pipeline/: README.md  STRUCTURE.md  __init__.py  analyze_probe_grid_ablation.py  appraisal_label_coupling.py  appraisal_overlap_diagnostic.py  appraisal_structure.py  appraisal_theory.py  baseline_probe_steering_study.py  build_generation_behavior_benchmark.py  capture_requirements.py  circuit_evidence.py  config.py  export_standalone.py  generation_behavior_benchmark.py  logger.py  logutil.py  mental_health_steering_benchmark.py  model_config.py  phase1_circuits.py  phase2_compute.py  phase2_isolate_directions.py  phase2_summary.py  probe_training_robustness.py  representation_analysis.py  requirements_runtime_pinned.txt  research_contracts.py  run_behavior_judges.py  run_pipeline_for_models.py  run_probe_grid_ablation.py  runtime_env.py  steering_benchmark.py  synthesis.py  theory_analysis.py  train_probes.py  (+2 more)
(+79 files in other folders)
