[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emo-llm-pipeline-standalone"
version = "0.1.0"
description = "Emotion and appraisal circuit analysis pipeline for LLMs (CLI)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate==1.10.1",
    "datasets==4.8.3",
    "filelock==3.13.1",
    "huggingface-hub==0.30.1",
    "Jinja2==3.1.4",
    "matplotlib==3.8.2",
    "networkx==3.3",
    "numpy>=1.26.4,<2.0",
    "packaging==25.0",
    "pandas==2.2.3",
    "plotly==6.6.0",
    "protobuf==6.32.1",
    "pyarrow==23.0.1",
    "python-dotenv==1.0.1",
    "regex==2025.9.18",
    "requests==2.32.5",
    "safetensors==0.6.2",
    "scikit-learn==1.8.0",
    "scipy==1.14.1",
    "seaborn==0.13.2",
    "sentencepiece==0.2.0",
    "sympy==1.13.3",
    "tokenizers==0.21.4",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "torchvision==0.23.0",
    "tqdm==4.66.5",
    "transformers==4.51.2",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*", "experiments*"]
namespaces = true
